--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -1,8 +1,6 @@
 name: "godot-ci export"
 on:
-  push:
-    branches:
-      - '!main'
+  pull_request: {}
 
 # NOTE: If your `project.godot` is at the repository root, set `PROJECT_PATH` below to ".".
 
